change from Blockchain1 to Picogrid_Blockchain

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="left"></div>
                 <div id="app">
-                    <h2>Blockchain1</h2>
+                    <h2>Picogrid_Blockchain</h2>
                     <div v-for="row in rows" class="row">
                         <div v-for="column in numCols(row)" v-bind:class="{ cell_left: column % 2 == 1, cell_right: column % 2 == 0 }">
                             <form>
