added keyword 'original'

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="label">Block&nbsp;Hash</td>
+                                        <td class="label">Original Block&nbsp;Hash</td>
                                         <td class="text" colspan="3">
                                             <input class="hash" disabled="true" type="text" v-model="hash[getIndex(row, column)]" />
                                         </td>
