added keyword 'original' (2)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <br />
                                 <table class="no_border">
                                     <tr>
-                                        <td class="label narrow">SHA&nbsp;256</td>
+                                        <td class="label narrow">ORIGINAL SHA&nbsp;256</td>
                                         <td class="text" colspan="3"> 
                                             <input class="hash"  v-bind:class="{bg_red: active[getIndex(row, column)]}" disabled="true" type="text" v-model="original_hash[getIndex(row, column)]" />
                                         </td>
